fix: aside alignment

--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ aside::before {
   text-transform:uppercase;
   font-size: 0.7em;
   font-weight: 600;
-  left: -12px;
+  left: -13px;
   padding: 7px 0;
   margin-top: 30px;
   position: absolute;
